# boilr-cpp_cmake

./: README.md  project.json
template/{{AppName}}/: CMakeLists.txt  Makefile  README.md  make_{{AppName}}.sh
template/{{AppName}}/scripts/: build_{{AppName}}.sh  helper_functions.sh
template/{{AppName}}/scripts/cmake/: ctestrun.cmake  version.cmake
template/{{AppName}}/src/: CMakeLists.txt  main.cpp
